--- a/promotion.html
+++ b/promotion.html
@@ -66,8 +66,8 @@
 				
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="portfolio.html">Promotion</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li class="active"><a href="portfolio.html">Promotion</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
@@ -98,8 +98,7 @@
 
 	<section id="blog" class="container">
         <div class="center">
-            <h2>Blogs</h2>
-            <p class="lead">Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+            <h2>Christmas & New Years Promotion!</h2>
                 <div class="blog-item">
                     <img class="img-responsive img-blog" src="images/promotion/promo.jpg" width="100%" alt="" />
                 </div><!--/.col-md-8-->
