--- a/services.html
+++ b/services.html
@@ -27,6 +27,7 @@
 
 <body class="homepage">
 
+
     <header id="header">
         <div class="top-bar">
             <div class="container">
@@ -97,13 +98,14 @@
     </header><!--/header-->
 
 
+
     <section id="feature" class="transparent-bg">
         <div class="container"> 
            <div class="center wow fadeInDown">           
                 <h2>James Zhang</h2>
-                <p class="lead"><strong>Registred Traditional Chinese Medicine Practitioner(R.TCMP)</strong> in Toronto, whom graduated from a Chinese University in traditional Chinese medicine. James Zhang has practiced traditional Chinese medicine for over 30 years. Having accumulated a wealth of knowledge over his impressive career, James has honed the treatment practices using acupuncture, tui nai massage, cupping and herbal prescriptions. <br>  </p>
+                <p class="lead"><strong>Registred Traditional Chinese Medicine Practitioner(R.TCMP)</strong> in Toronto, whom graduated from a Chinese University in traditional Chinese medicine. James Zhang has practiced traditional Chinese medicine for over 30 years. Having accumulated a wealth of knowledge over his impressive career, James has honed the treatment practices using acupuncture, tui nai massage, cupping and herbal prescriptions.</p>
             </div>
-                <section id="content">
+    <section id="content">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 wow fadeInDown">
@@ -115,50 +117,42 @@
                                     <li class=""><a href="#tab2" data-toggle="tab" class="analistic-02">Illnesses</a></li>
                                     <li class=""><a href="#tab3" data-toggle="tab" class="tehnical">Female Focus</a></li>
                                     <li class=""><a href="#tab4" data-toggle="tab" class="tehnical">General</a></li>
-                                    <li class=""><a href="#tab5" data-toggle="tab" class="tehnical">Herbal Perscriptions</a></li>
+                                    <li class=""><a href="#tab5" data-toggle="tab" class="tehnical">Herbal Medicine</a></li>
                                 </ul>
                             </div>
 
                             <div class="parrent media-body">
                                 <div class="tab-content">
-                                    <div class="tab-pane fade" id="tab1">
+                                    <div class="tab-pane fade active in" id="tab1">
                                         <div class="media">
-                                           <div class="pull-left">
-                                                <img class="img-responsive" src="images/tab2.png">
-                                            </div>
                                             <div class="media-body">
                                                  <h2>Lumbar:</h2>
-                                                 <p>Disk herniation, acute lumbar sprain, chronic lumbar pain,</p>
-                                                 <h2>Nervous:</h2>
-                                                 <p>Sciatica, numbness in extremities
+                                                 <p>Disk herniation, acute lumbar sprain, chronic lumbar pain</p>
+                                                 <h2>Nerve:</h2>
+                                                 <p>Sciatica, numbness in extremities, paralysis</p>
                                             </div>
                                         </div>
                                     </div>
 
-                                     <div class="tab-pane fade active in" id="tab2">
+                                    <div class="tab-pane fade" id="tab2">
                                         <div class="media">
-                                           <div class="pull-left">
-                                                <img class="img-responsive" src="images/tab1.png">
-                                            </div>
                                             <div class="media-body">
-                                                 <h2>Adipisicing elit</h2>
-                                                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use.
-                                                 </p>
+                                                 <p>Multiple Sclerosis<br>Stroke</p>
                                             </div>
                                         </div>
-                                     </div>
+                                    </div>
 
-                                     <div class="tab-pane fade" id="tab3">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
-                                     </div>
+                                    <div class="tab-pane fade" id="tab3">
+                                        <p> Menstrual cramps <br>Menopause <br>Improvement in comfort during pregnancy</p>
+                                    </div>
                                      
-                                     <div class="tab-pane fade" id="tab4">
-                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words</p>
-                                     </div>
+                                    <div class="tab-pane fade" id="tab4">
+                                        <p>Arthritis<br>Migrains <br>Shoulder and neck inflammation<br>Exercise induced muscle injuries<br>Mental tension<br>Vertigo </p>
+                                    </div>
 
-                                     <div class="tab-pane fade" id="tab5">
-                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures,</p>
-                                     </div>
+                                    <div class="tab-pane fade" id="tab5">
+                                        <p>Prescription of pure plants and other non-botanical essenses</p>
+                                    </div>
                                 </div> <!--/.tab-content-->  
                             </div> <!--/.media-body--> 
                         </div> <!--/.media-->     
@@ -193,12 +187,13 @@
 
             </div><!--/.row-->
         </div><!--/.container-->
+    </section><!--/#content-->
 
         <div class="get-started center wow fadeInDown">
-            <h2>Ready to get started</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. <br>  Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <h2>Initial Assessment</h2>
+            <p class="lead"> Questionnaire, interview and examination, followed by a diagnosis and proposal of treatment plan. The assessment is a detailed enquiry to learn as much about your health as possible. The assessment includes examination of the pulse on both wrists, the tongue and other indicators which might not be customary in conventional medical exams.</p>
             <div class="request">
-                <h4><a href="#">Request a free Quote</a></h4>
+                <h4>$110</h4>
             </div>
         </div><!--/.get-started-->
 
@@ -206,11 +201,9 @@
             <h2>Ready to get started</h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. <br>  Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
             <div class="request">
-                <h4><a href="#">Request a free Quote</a></h4>
+                <h4>$90</h4>
             </div>
-        </div><!--/.get-started-->           
-
-        </div><!--/.container-->
+        </div><!--/.get-started-->    
     </section><!--/#feature-->
 
     <script src="js/jquery.js"></script>
