--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Acupuncture</a></li>
+                                <li><a href="acupuncture.html">Acupuncture</a></li>
                                 <li><a href="blog-item.html">Hydrotherapy</a></li>
                                 <li><a href="blog-item.html">Facials</a></li>
                                 <li><a href="blog-item.html">Massages</a></li>
