--- a/hydrotherapy.html
+++ b/hydrotherapy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Promotion</title>
+    <title>Hydrotherapy</title>
     
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -26,14 +26,12 @@
 </head><!--/head-->
 
 <body class="homepage">
-
-
     <header id="header">
         <div class="top-bar">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-4">
-                        <div class="top-number"><p><i class="fa fa-phone-square"></i>  (416) 923-2768</p></div>
+                        <div class="top-number"><p><i class="fa fa-phone-square"></i> (416) 923-2768</p></div>
                     </div>
                     <div class="col-sm-6 col-xs-8">
                        <div class="social">
@@ -68,12 +66,12 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active"><a href="promotion.html">Promotion</a></li>
+                        <li><a href="promotion.html">Promotion</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="acupuncture.html">Acupuncture</a></li>
-                                <li><a href="hydrotherapy.html">Hydrotherapy</a></li>
+                                <li class="active"><a href="hydrotherapy.html">Hydrotherapy</a></li>
                                 <li><a href="facials.html">Facials</a></li>
                                 <li><a href="massages.html">Massages</a></li>
                                 <li><a href="skin_therapy.html">Skin Therapy</a></li>
@@ -97,21 +95,51 @@
         </nav><!--/nav-->
     </header><!--/header-->
 
+    <section id="content">
+        
+        <div class="get-started center wow fadeInDown">
+            <h2>Vichy Shower</h2>
+            <p class="lead"> 
+            <strong>15 minutes</strong><br><br>
+            Enjoy the benefits of hydrotherapy as the water movements increase blood circulation while hydrating the skin and sooths your nervious system</p>
+            <div class="request">
+                <h4>$45</h4>
+            </div>
+        </div><!--/.get-started-->
 
-	<section id="blog" class="container">
-        <div class="center">
-            <h2>Christmas & New Years Promotion!</h2>
-                <div class="blog-item">
-                    <img class="img-responsive img-blog" src="images/promotion/promo.jpg" width="100%" alt="" />
-                </div><!--/.col-md-8-->
-            </div><!--/.row-->
-         </div><!--/.blog-->
-    </section><!--/#blog-->
+        <div class="get-started center wow fadeInDown">
+            <h2>Vichy Shower</h2><p>(with Massage)</p>
+            <p class="lead">
+            <strong>20 minutes</strong><br><br>
+            Enjoy all the same benefits as the normal Vichy Shower with an added service of a massage during the treatment</p>
+            <div class="request">
+                <h4>$70</h4>
+            </div>
+        </div><!--/.get-started-->    
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Sauna or Steam</h2>
+            <p class="lead">
+            <strong>unlimited time per visit</strong><br><br>
+            Extend your visit with us by adding our steam room and sauna to <strong>any of your services</strong>. This hydrotherapy is great addition to start or end off your visit, the sauna uses active heat to detoxify the entire body, while the steam room uses moist heat to relax the muscle and lower blood pressure.</p>
+            <div class="request">
+                <h4>$35</h4>
+            </div>
+        </div><!--/.get-started-->  
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Sauna & Steam</h2>
+            <p class="lead">
+            <strong>unlimited time per visit</strong><br><br>
+            Why not use <stong>both</stong> rooms to maximize your health! </p>
+            <div class="request">
+                <h4>$55</h4>
+            </div>
+        </div><!--/.get-started-->  
+ 
+    </section><!--/#feature-->
 
     <script src="js/jquery.js"></script>
-    <script type="text/javascript">
-        $('.carousel').carousel()
-    </script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
     <script src="js/jquery.isotope.min.js"></script>
