--- a/acupuncture.html
+++ b/acupuncture.html
@@ -68,28 +68,28 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="portfolio.html">Promotion</a></li>
+                        <li><a href="promotion.html">Promotion</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="blog-item.html">Acupuncture</a></li>
-                                <li><a href="blog-item.html">Hydrotherapy</a></li>
-                                <li><a href="blog-item.html">Facials</a></li>
-                                <li><a href="blog-item.html">Massages</a></li>
-                                <li><a href="pricing.html">Skin Therapy</a></li>
-                                <li><a href="404.html">Nails</a></li>
-                                <li><a href="shortcodes.html">Waxing</a></li>
+                                <li class="active"><a href="acupuncture.html">Acupuncture</a></li>
+                                <li><a href="hydrotherapy.html">Hydrotherapy</a></li>
+                                <li><a href="facials.html">Facials</a></li>
+                                <li><a href="massages.html">Massages</a></li>
+                                <li><a href="skin_therapy.html">Skin Therapy</a></li>
+                                <li><a href="nails.html">Nails</a></li>
+                                <li><a href="waxing.html">Waxing</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Packages<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Spa Package</a></li>
-                                <li><a href="blog-item.html">Group Package</a></li>
+                                <li><a href="spa_package.html">Spa Package</a></li>
+                                <li><a href="group_package.html">Group Package</a></li>
                             </ul>
                         </li>
-                        <li><a href="services.html">Facilities</a></li>
-                        <li><a href="blog-item.html">Gift</a></li>
+                        <li><a href="facilities.html">Facilities</a></li>
+                        <li><a href="gift.html">Gift</a></li>
                         <li><a href="contact-us.html">Contact</a></li>                        
                     </ul>
                 </div>
