--- a/facials.html
+++ b/facials.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Skin Therapy</title>
+    <title>Facials</title>
     
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -72,9 +72,9 @@
                             <ul class="dropdown-menu">
                                 <li><a href="acupuncture.html">Acupuncture</a></li>
                                 <li><a href="hydrotherapy.html">Hydrotherapy</a></li>
-                                <li><a href="facials.html">Facials</a></li>
+                                <li class="active"><a href="facials.html">Facials</a></li>
                                 <li><a href="massages.html">Massages</a></li>
-                                <li class="active"><a href="skin_therapy.html">Skin Therapy</a></li>
+                                <li><a href="skin_therapy.html">Skin Therapy</a></li>
                                 <li><a href="nails.html">Nails</a></li>
                                 <li><a href="waxing.html">Waxing</a></li>
                             </ul>
@@ -98,54 +98,115 @@
     <section id="content">
         
         <div class="get-started center wow fadeInDown">
-            <h2>Spring Body Polish</h2>
+            <h2>The Beauty Break Facial</h2>
             <p class="lead"> 
-            <strong>25 minutes</strong><br><br>
-            A gentle body exfoliation treatment designed to help remove the accumulation of dull skin cells, while improving blood circulation resulting in soft and revitalized skin</p>
+            <strong>35 minutes</strong><br><br>
+            This facial includes cleansing, steaming, exfoliation, and a facial massage ending with a moisturizing lotion. <strong>Recommended for all skin types</strong></p>
             <div class="request">
                 <h4>$60</h4>
             </div>
         </div><!--/.get-started-->
 
         <div class="get-started center wow fadeInDown">
-            <h2>Body Exfoliation & 60 Minute Massage</h2>
+            <h2>Spring Signature Facial</h2>
             <p class="lead">
-            <strong>85 minutes</strong><br><br>
-            A Spring Body Polish accompanied with an 60 minute massage</p>
+            <strong>45 minutes</strong><br><br>
+            This facial includes cleaning, steaming, exfoliation, extraction, the use of a high frequency machine to minimize pores and promote collagen in the face, ending with a facial massage with a moisturizing lotion. <strong>Recommended for all skin types</strong></p>
             <div class="request">
-                <h4>$130</h4>
+                <h4>$70</h4>
             </div>
         </div><!--/.get-started-->    
 
         <div class="get-started center wow fadeInDown">
-            <h2>Dead Sea Mud Wrap</h2><p>with Vichy Shower</p> 
+            <h2>Deep Cleansing Facial</h2>
             <p class="lead">
             <strong>90 minutes</strong><br><br>
-            This treatment begins with a brisk, full-body loofah exfoliation followed by a rich dead sea mud which is applied all over. You will enjoy a pressure-point scalp massage as your skin absorb all the mineral and nutrients from the wrap while in a hot blanket. The treatment is finished with an application of moisturizing lotion</p>
+            This truly personalize facial includes cleansing, steaming,exfoliation, more detailed extraction, the use of a high frequency machine to minimize pores and promote collagen in the face, ending with a facial massage with a moisturizing lotion.<strong>Recommended for problematic skin types</strong></p>
             <div class="request">
-                <h4>$150</h4>
+                <h4>$125</h4>
             </div>
         </div><!--/.get-started-->  
 
         <div class="get-started center wow fadeInDown">
-            <h2>Back Facial</h2>
+            <h2>Peeling Facial</h2>
+            <p class="lead">
+            <strong>90 minutes</strong><br><br>
+            Rejuvenate your skin with our AHA-BHA facial products from Yon-Ka Paris. This facial works to refine acne skins. Start with a gentle cleansing, removal of extra oil form pores to smooth the fine lines from acne scars with a peel. <strong>Recommended for problematic skin types</strong></p>
+            <div class="request">
+                <h4>$135</h4>
+            </div>
+        </div><!--/.get-started-->  
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Lifting-Effect Facial</h2>
+            <p class="lead">
+            <strong>90 minutes</strong><br><br>
+            Helps lift and reduce wrinkles and fine lines. This facial stimulates the vitality of the skin and facial contours to appear tighter and keeps the face generously hydrated.<strong>Recommended for mature skin types</strong></p>
+            <div class="request">
+                <h4>$135</h4>
+            </div>
+        </div><!--/.get-started--> 
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Collagen Anti-Aging Facial</h2>
+            <p class="lead">
+            <strong>80 minutes</strong><br><br>
+            Developd to simultaneously stimulate, exfoliate and nourish the multiple layers of your delicate skin with anti-aging mask. This relaxing facial is result-orientated and aromatic. It re-establishes softness, vibrancy and elasticity back to your healthy skin.<strong>Recommended for mature skin types</strong> </p>
+            <div class="request">
+                <h4>$115</h4>
+            </div>
+        </div><!--/.get-started--> 
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Deep Hydrating Facial</h2>
+            <p class="lead">
+            <strong>90 minutes</strong><br><br>
+            This high performance, deep hydrating facial will revive the most dehydrated and dull complexions, eliminating signs of stress and helps restore balance into itself. <strong>Recommended for all skin types</p>
+            <div class="request">
+                <h4>$115</h4>
+            </div>
+        </div><!--/.get-started-->  
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Teenage Facial</h2>
+            <p class="lead">
+            <strong>45 minutes</strong><br><br>
+            This relaxing, beneficial treatment promotes early habits for great skincare and hygiene. Starting with thorough skin analysis, followed by a cleaning, steaming, a gentle pee. Extraction is performed as needed and a cooling mask is applied, finishing with a moisturizing lotion. <strong>Recommended for young skin types</strong></p>
+            <div class="request">
+                <h4>$80</h4>
+            </div>
+        </div><!--/.get-started--> 
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Gentleman's Spa Signaure Facial</h2>
             <p class="lead">
             <strong>60 minutes</strong><br><br>
-            This treatment for satin-soft skin inclusdes an exfoliation followed by a gentle massage with vitamin-enriched aromatic oils, leaving your skin feeling like velvet!</p>
+            With 5 steps progressve cleansing, you will experience the truly personalized complete facial care with the addition of an anti-aging mask at the end. <strong>Recommended for all skin types</strong> </p>
             <div class="request">
-                <h4>$85</h4>
+                <h4>$105</h4>
             </div>
-        </div><!--/.get-started-->  
+        </div><!--/.get-started-->
 
         <div class="get-started center wow fadeInDown">
-            <h2>Ear Candling</h2>
+            <h2>Eye Contour Anti-Wrinkle Treatment</h2>
             <p class="lead">
-            <strong>30 minutes</strong><br><br>
-            Ear candling is a centuries-old practice used to remove wax buildup and blockage in the inner-ear. This soothing application involves placing a slow burning cylinder gently into the outer ear.</p>
+            <strong>45 minutes</strong><br><br>
+            Combined action of active plant ingredients, eye mask and speciality acupressure massages to sooth away wrinkles, fine lines and improve signs of fatigue.</p>
+            <div class="request">
+                <h4>$65</h4>
+            </div>
+        </div><!--/.get-started-->
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Lifting-Effect Facial</h2>
+            <p class="lead">
+            <strong>45 minutes</strong><br><br>
+            Combined action of active ingredients and a cold mask and lymphatic drainage massage that will eliminate toxins from the eye bag. The results of a calm and firm contour of the eyes.
+            </p>
             <div class="request">
                 <h4>$55</h4>
             </div>
-        </div><!--/.get-started-->  
+        </div><!--/.get-started-->
     </section><!--/#feature-->
 
     <script src="js/jquery.js"></script>
