--- a/massages.html
+++ b/massages.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Facials</title>
+    <title>Massages</title>
     
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -72,8 +72,8 @@
                             <ul class="dropdown-menu">
                                 <li><a href="acupuncture.html">Acupuncture</a></li>
                                 <li><a href="hydrotherapy.html">Hydrotherapy</a></li>
-                                <li class="active"><a href="facials.html">Facials</a></li>
-                                <li><a href="massages.html">Massages</a></li>
+                                <li><a href="facials.html">Facials</a></li>
+                                <li class="active"><a href="massages.html">Massages</a></li>
                                 <li><a href="skin_therapy.html">Skin Therapy</a></li>
                                 <li><a href="nails.html">Nails</a></li>
                                 <li><a href="waxing.html">Waxing</a></li>
@@ -103,7 +103,7 @@
             <strong>35 minutes</strong><br><br>
             This facial includes cleansing, steaming, exfoliation, and a facial massage ending with a moisturizing lotion. <br><strong>Recommended for all skin types</strong></p>
             <div class="request">
-                <h4>$60</h4>
+                <h4>45 mins<br><strong>$60</strong></h4>
             </div>
         </div><!--/.get-started-->
 
