--- a/nails.html
+++ b/nails.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Facials</title>
+    <title>Nails</title>
     
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -72,10 +72,10 @@
                             <ul class="dropdown-menu">
                                 <li><a href="acupuncture.html">Acupuncture</a></li>
                                 <li><a href="hydrotherapy.html">Hydrotherapy</a></li>
-                                <li class="active"><a href="facials.html">Facials</a></li>
+                                <li><a href="facials.html">Facials</a></li>
                                 <li><a href="massages.html">Massages</a></li>
                                 <li><a href="skin_therapy.html">Skin Therapy</a></li>
-                                <li><a href="nails.html">Nails</a></li>
+                                <li class="active"><a href="nails.html">Nails</a></li>
                                 <li><a href="waxing.html">Waxing</a></li>
                             </ul>
                         </li>
@@ -98,113 +98,102 @@
     <section id="content">
         
         <div class="get-started center wow fadeInDown">
-            <h2>The Beauty Break Facial</h2>
+            <h2>Classic Spa Manicure</h2>
             <p class="lead"> 
-            <strong>35 minutes</strong><br><br>
-            This facial includes cleansing, steaming, exfoliation, and a facial massage ending with a moisturizing lotion. <br><strong>Recommended for all skin types</strong></p>
+            <strong>30 minute</strong><br><br>
+            Soaking, cuticle and nail trimmings, and polish or buff finish of your choice </p>
             <div class="request">
-                <h4>$60</h4>
+                <h4>$25</h4>
             </div>
         </div><!--/.get-started-->
 
         <div class="get-started center wow fadeInDown">
-            <h2>Spring Signature Facial</h2>
+            <h2>Deluxe Spa Manicure</h2><p>with Hot Stone</p>
             <p class="lead">
             <strong>45 minutes</strong><br><br>
-            This facial includes cleaning, steaming, exfoliation, extraction, the use of a high frequency machine to minimize pores and promote collagen in the face, ending with a facial massage with a moisturizing lotion. <br><strong>Recommended for all skin types</strong></p>
+            An ultimate hand care treatment that includes exfoliation, relaxing hot stone massage, and moisturizing mask for the hand. Polish or buff finish of choice </strong></p>
             <div class="request">
                 <h4>$70</h4>
             </div>
         </div><!--/.get-started-->    
 
         <div class="get-started center wow fadeInDown">
-            <h2>Deep Cleansing Facial</h2>
+            <h2>French Manicure</h2>
             <p class="lead">
-            <strong>90 minutes</strong><br><br>
-            This truly personalize facial includes cleansing, steaming,exfoliation, more detailed extraction, the use of a high frequency machine to minimize pores and promote collagen in the face, ending with a facial massage with a moisturizing lotion. <br><strong>Recommended for problematic skin types</strong></p>
-            <div class="request">
-                <h4>$125</h4>
-            </div>
-        </div><!--/.get-started-->  
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Peeling Facial</h2>
-            <p class="lead">
-            <strong>90 minutes</strong><br><br>
-            Rejuvenate your skin with our AHA-BHA facial products from Yon-Ka Paris. This facial works to refine acne skins. Start with a gentle cleansing, removal of extra oil form pores to smooth the fine lines from acne scars with a peel. <br><strong>Recommended for problematic skin types</strong></p>
-            <div class="request">
-                <h4>$135</h4>
-            </div>
-        </div><!--/.get-started-->  
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Lifting-Effect Facial</h2>
-            <p class="lead">
-            <strong>90 minutes</strong><br><br>
-            Helps lift and reduce wrinkles and fine lines. This facial stimulates the vitality of the skin and facial contours to appear tighter and keeps the face generously hydrated. <br><strong>Recommended for mature skin types</strong></p>
-            <div class="request">
-                <h4>$135</h4>
-            </div>
-        </div><!--/.get-started--> 
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Collagen Anti-Aging Facial</h2>
-            <p class="lead">
-            <strong>80 minutes</strong><br><br>
-            Developd to simultaneously stimulate, exfoliate and nourish the multiple layers of your delicate skin with anti-aging mask. This relaxing facial is result-orientated and aromatic. It re-establishes softness, vibrancy and elasticity back to your healthy skin. <br><strong>Recommended for mature skin types</strong> </p>
-            <div class="request">
-                <h4>$115</h4>
-            </div>
-        </div><!--/.get-started--> 
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Deep Hydrating Facial</h2>
-            <p class="lead">
-            <strong>90 minutes</strong><br><br>
-            This high performance, deep hydrating facial will revive the most dehydrated and dull complexions, eliminating signs of stress and helps restore balance into itself. <br><strong>Recommended for all skin types</strong></p>
-            <div class="request">
-                <h4>$115</h4>
-            </div>
-        </div><!--/.get-started-->  
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Teenage Facial</h2>
-            <p class="lead">
-            <strong>45 minutes</strong><br><br>
-            This relaxing, beneficial treatment promotes early habits for great skincare and hygiene. Starting with thorough skin analysis, followed by a cleaning, steaming, a gentle pee. Extraction is performed as needed and a cooling mask is applied, finishing with a moisturizing lotion. <br><strong>Recommended for young skin types</strong></p>
-            <div class="request">
-                <h4>$80</h4>
-            </div>
-        </div><!--/.get-started--> 
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Gentleman's Spa Signaure Facial</h2>
-            <p class="lead">
-            <strong>60 minutes</strong><br><br>
-            With 5 steps progressve cleansing, you will experience the truly personalized complete facial care with the addition of an anti-aging mask at the end. <br><strong>Recommended for all skin types</strong> </p>
-            <div class="request">
-                <h4>$105</h4>
-            </div>
-        </div><!--/.get-started-->
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Eye Contour Anti-Wrinkle Treatment</h2>
-            <p class="lead">
-            <strong>45 minutes</strong><br><br>
-            Combined action of active plant ingredients, eye mask and speciality acupressure massages to sooth away wrinkles, fine lines and improve signs of fatigue.</p>
-            <div class="request">
-                <h4>$65</h4>
-            </div>
-        </div><!--/.get-started-->
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Lifting-Effect Facial</h2>
-            <p class="lead">
-            <strong>45 minutes</strong><br><br>
-            Combined action of active ingredients and a cold mask and lymphatic drainage massage that will eliminate toxins from the eye bag. The results of a calm and firm contour of the eyes.
+            <strong>30 minutes</strong><br><br>
             </p>
             <div class="request">
-                <h4>$55</h4>
+                <h4>$35</h4>
+            </div>
+        </div><!--/.get-started-->  
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Shellac Manicure</h2>
+            <p class="lead">
+            <strong>45 minutes</strong><br><br>
+            A classic spa manicure using CND Shellac Polish lasting up to 14 days of wear</p>
+            <div class="request">
+                <h4>$45</h4>
+            </div>
+        </div><!--/.get-started-->  
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Polish Change</h2>
+            <p class="lead">
+            <strong>15 minutes</strong><br><br>
+            </p>
+            <div class="request">
+                <h4>$15</h4>
+            </div>
+        </div><!--/.get-started--> 
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Classic Spa Pedicure</h2>
+            <p class="lead">
+            <strong>40 minutes</strong><br><br>
+            Soaking, callus removing, cuticle and nail trimming, and polish or buff polish of your choice</strong> </p>
+            <div class="request">
+                <h4>$40</h4>
+            </div>
+        </div><!--/.get-started--> 
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Deluxe Spa Pedicure</h2><p>(with Hot Stone)</p>
+            <p class="lead">
+            <strong>60 minutes</strong><br><br>
+            A deep relaxing treatment with a refreshing herbal bath which is followed by foot scrub. Massage is performed with hot stone to help penetration with essential products. Polish or buff finish of choice</p>
+            <div class="request">
+                <h4>$60</h4>
+            </div>
+        </div><!--/.get-started-->  
+
+        <div class="get-started center wow fadeInDown">
+            <h2>French Pedicure</h2>
+            <p class="lead">
+            <strong>60 minutes</strong><br><br>
+            </p>
+            <div class="request">
+                <h4>$45</h4>
+            </div>
+        </div><!--/.get-started--> 
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Shellac Pedicure</h2>
+            <p class="lead">
+            <strong>60 minutes</strong><br><br>
+            A classic spa pedicure using CND Shellac polish lasting up to 14 days of wear</p>
+            <div class="request">
+                <h4>$60</h4>
+            </div>
+        </div><!--/.get-started-->
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Foot Scrub</h2>
+            <p class="lead">
+            <strong>10 minutes</strong><br><br>
+            </p>
+            <div class="request">
+                <h4>$15</h4>
             </div>
         </div><!--/.get-started-->
     </section><!--/#feature-->
